<resources>
    android:textSize="64sp"
    <string name="action_settings">Settings</string>
    <string name="action_help">help</string>
    <string name="app_name">adf state</string>
    <string name="hint">hint? click empty tile!</string>
    <string name="set_size_hor" translatable="false">size</string>
    <string name="reset_hor">reset</string>
    <string name="shuffle">Shuffle</string>
    <string name="solve">Solve</string>
    <string name="solve_ikke">Solve</string>
    <string name="al300">animation lag 300</string>
    <string name="al500">animation lag 500</string>
    <string name="al1000">animation lag 1000</string>
    <string name="tile">tileDinges</string>
    <string name="tile_size">138dp</string>
</resources>
